# robot_piano

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  docker-compose.yml  package.xml
include/robot_piano/: hand_publisher.hpp  moveit_planner.hpp  params.hpp  utils.hpp
launch/: left.launch.py  moveit_left.launch.py  mtc_left.rviz  mtc_right.rviz  piano.launch.py  right.launch.py  robot_moveit.launch.py
scripts/: enable_domain_bridge.sh  play_piano.sh  pre-commit.hook  trigger.sh
src/: bridge.cpp  hand_publisher.cpp  ik_calc.cpp  left.cpp  moveit_planner.cpp  right.cpp  trigger.cpp
